fixed spacing

--- a/dapp/src/style/Header.css
+++ b/dapp/src/style/Header.css
@@ -69,7 +69,7 @@
     justify-content: space-between;
     margin-right: 2%;
     padding: 10px;
-    width: 150px;
+    width: 130px;
     height: 50px;
     border-radius: 8px;
     align-items: center;
